--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="odd-numbered">Number 1 - I'm a class!</p>
     <div id="second-element">Number 2 - I'm one ID.</div>
-    <p class="odd-numbered third-one">Number 3 - I'm a class, but cooler!</p>
-    <div id="fourth-element">Number 4 - I'm another ID.</div>
+    <p class="odd-numbered ajust-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="fourth-element" class="ajust-font-size">Number 4 - I'm another ID.</div>
     <p class="odd-numbered">Number 5 - I'm a class!</p>
   </body>
 </html>
