--- a/foundations/flex/05-flex-modal/index.html
+++ b/foundations/flex/05-flex-modal/index.html
@@ -13,8 +13,7 @@
   <div class="modal">
     <div class="icon">!</div>
     <div class="right-wrapper">
-      <div class="header-wrapper">
-        <div class="header">Are you sure you want to do that?</div>
+      <div class="header">Are you sure you want to do that?
         <button class="close-button">✖</button>
       </div>
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam
